# SR_Project_H414

./: Exam_SZPIRER_Jeanne.txt  README.md  foraging.argos  foraging.lua  results_flex.csv  results_scal.csv  results_scalab.csv  script_test.py  scripted_foraging.argos  scripted_foraging_scal.argos
src/: CMakeLists.txt  foraging.cpp  foraging.h
